--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <span>Random time and date</span>
             </div>
             <div class="weather_conditions">
-                <p><img src="" alt=""></p>
+                <p style="height: 50px;"><img src="" alt=""></p>
                 <span>condition</span>
             </div>
         </div>
